--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.5.1'
     testImplementation 'com.codeborne:selenide:5.3.1'
+    testImplementation("io.github.bonigarcia:webdrivermanager:5.3.2")
 }
 
 test {
